@@ -12,8 +12,10 @@ write.graph(graph, file, format="edgelist", \dots)
   \item{file}{A connection or a string giving the file name to write the
     graph to.}
   \item{format}{Character string giving the file format. Right now 
-    \code{pajek}, \code{graphml}, \code{edgelist}, \code{lgl} and
-    \code{ncol} are implemented.} 
+    \code{pajek}, \code{graphml}, \code{gml}, \code{edgelist}, \code{lgl},
+    \code{ncol} and \code{dimacs} are implemented. As of igraph 0.4 this
+    argument is case insensitive.
+  }
   \item{\dots}{Other, format specific arguments, see below.}
 }
 \details{
@@ -93,6 +95,45 @@ write.graph(graph, file, format="edgelist", \dots)
     \item{capacity}{A numeric vector giving the edge capacities. If
       \code{NULL} (the default) then it is taken from the
       \code{capacity} edge attribute.}
+  }
+
+  GML is a quite general textual format, see 
+  \url{http://www.infosun.fim.uni-passau.de/Graphlet/GML/} for details.
+ 
+  The graph, vertex and edges attributes are written to the
+  file as well, if they are numeric of string.
+ 
+  As igraph is more forgiving about attribute names, it might 
+  be neccessary to simplify the them before writing to the GML file.
+  This way we'll have a syntactically correct GML file. The following 
+  simple procedure is performed on each attribute name: first the alphanumeric 
+  characters are extracted, the others are ignored. Then if the first character
+  is not a letter then the attribute name is prefixed with <quote>igraph</quote>.
+  Note that this might result identical names for two attributes, igraph 
+  does not check this. 
+ 
+  The \dQuote{id} vertex attribute is treated specially. 
+  If the \code{id} argument is not \code{NULL} then it should be a numeric 
+  vector with the vertex ids and the \dQuote{id} vertex attribute is 
+  ignored (if there is one). If \code{id} is 0 and there is a 
+  numeric \code{id} vertex attribute that is used instead. If ids
+  are not specified in either way then the regular igraph vertex ids are used.
+ 
+  Note that whichever way vertex ids are specified, their 
+  uniqueness is not checked.
+ 
+  If the graph has edge attributes named \dQuote{source}
+  or \dQuote{target} they're silently ignored. GML uses these attributes
+  to specify the edges, so we cannot write them to the file. Rename them 
+  before calling this function if you want to preserve them.
+
+  Additional arguments:
+  \itemize{
+    \item{id}{\code{NULL} or a numeric vector giving the vertex ids. See
+      details above.}
+    \item{creator}{A character scalar to be added to the
+      \dQuote{Creator} line in the GML file. If this is \code{NULL} (the
+      default) then the current date and time is added.}
   }
 }
 \value{A NULL, invisibly.}
